--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -197,48 +197,48 @@
                         width: 10px; // Добавляем ширину для вертикального скроллбара
                     }
 
-                &::-webkit-scrollbar-track {
-                    background: rgba(92, 92, 92, 0.8);
-                    border-radius: 10px;
-                }
+                    &::-webkit-scrollbar-track {
+                        background: rgba(92, 92, 92, 0.8);
+                        border-radius: 10px;
+                    }
 
-                &::-webkit-scrollbar-thumb {
-                    background: rgba(255, 255, 255, 0.2);
-                    border-radius: 10px;
-                    border: 2px solid transparent;
-                    background-clip: content-box;
-                    
-                    &:hover {
-                        background: rgba(255, 255, 255, 0.3);
+                    &::-webkit-scrollbar-thumb {
+                        background: rgba(255, 255, 255, 0.2);
+                        border-radius: 10px;
+                        border: 2px solid transparent;
                         background-clip: content-box;
+                        
+                        &:hover {
+                            background: rgba(255, 255, 255, 0.3);
+                            background-clip: content-box;
+                        }
+                        
+                        &:active {
+                            background: rgba(255, 255, 255, 0.4);
+                            background-clip: content-box;
+                        }
                     }
-                    
-                    &:active {
-                        background: rgba(255, 255, 255, 0.4);
-                        background-clip: content-box;
-                    }
-                }
 
-                // Стили для Firefox
-                & {
-                    scrollbar-width: thin; // auto | thin | none
-                    scrollbar-color: rgba(255, 255, 255, 0.2) rgba(92, 92, 92, 0.8);
-                }
-
-                // Стили для Internet Explorer и старых версий Edge
-                & {
-                    // Цвет трека
-                    scrollbar-base-color: rgba(92, 92, 92, 0.8);
-                    scrollbar-face-color: rgba(255, 255, 255, 0.2);
-                    scrollbar-track-color: rgba(92, 92, 92, 0.8);
-                    scrollbar-arrow-color: rgba(255, 255, 255, 0.2);
-                    scrollbar-shadow-color: rgba(255, 255, 255, 0.2);
-                    
-                    // Изменение цвета при наведении
-                    &:hover {
-                        scrollbar-face-color: rgba(255, 255, 255, 0.3);
+                    // Стили для Firefox
+                    & {
+                        scrollbar-width: thin; // auto | thin | none
+                        scrollbar-color: rgba(255, 255, 255, 0.2) rgba(92, 92, 92, 0.8);
                     }
-                }
+
+                    // Стили для Internet Explorer и старых версий Edge
+                    & {
+                        // Цвет трека
+                        scrollbar-base-color: rgba(92, 92, 92, 0.8);
+                        scrollbar-face-color: rgba(255, 255, 255, 0.2);
+                        scrollbar-track-color: rgba(92, 92, 92, 0.8);
+                        scrollbar-arrow-color: rgba(255, 255, 255, 0.2);
+                        scrollbar-shadow-color: rgba(255, 255, 255, 0.2);
+                        
+                        // Изменение цвета при наведении
+                        &:hover {
+                            scrollbar-face-color: rgba(255, 255, 255, 0.3);
+                        }
+                    }
         
                 }
                 &__screenshotsIF {
@@ -424,6 +424,7 @@
     }
     &__info {
         width: 400px;
+        height: 493px;
         align-self: flex-end;
         border-radius: 20px;
         padding: 15px;
