--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,3 +27,5 @@
 @use "elements/profile/more";
 @use "elements/profile/purchase";
 @use "elements/catalog/formFilters";
+@use "elements/basket/basketContainer";
+@use "elements/favorite/favorite";
