--- a/scss/default/_def.scss
+++ b/scss/default/_def.scss
@@ -44,7 +44,7 @@ label {
 	display: block;
 }
 
-// -------------- classes
+// -------------- classes 
 
 .hidden {
 	display: none;
@@ -87,7 +87,7 @@ label {
     max-height: 100%;
 }
 
-// -------------- animations
+// -------------- animations 
 
 @keyframes open_offers_games {
     0% {
@@ -143,5 +143,49 @@ label {
     }
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes open_game {
+    0% {
+        /* transform: translateX(-70px); */
+        opacity: 0;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    100% {
+        opacity: 1;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
+@keyframes open_totalBlock {
+    0% {
+        opacity: 0;
+        transform: scale(1.3);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes show_notification {
+    0% {
+        visibility: visible;
+    }
+    10% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        visibility: hidden;
+        display: none;
     }
 }
