--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -57,21 +57,19 @@
         }
         &__prices {
             display: flex;
-            // flex-direction: column;
-            // align-items: end;
-            // justify-content: center;
-            align-items: center;
-            justify-content: end;
-            gap: 5px;
+            flex-direction: column;
+            align-items: end;
+            justify-content: center;
+            // gap: 5px;
             &__old {
                 text-decoration: line-through;
-                font-size: 20px;
+                font-size: 18px;
                 color: rgb(200, 200, 200);
                 transform: translateY(5px);
             }
             &__new {
                 font-weight: 700;
-                font-size: 32px;
+                font-size: 28px;
             }
         }
         &__discount {
@@ -424,12 +422,21 @@
     }
     &__info {
         width: 400px;
-        height: 493px;
+        height: 494px;
         align-self: flex-end;
         border-radius: 20px;
         padding: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         @include base.style-main_base;
         box-shadow: 0 0 25px -5px rgba(0, 0, 0, 0.3);
+        &__top {
+
+        }
+        &__bottom {
+
+        }
         &__img {
             width: 100%;
             & > img {
