--- a/scss/elements/_inputList.scss
+++ b/scss/elements/_inputList.scss
@@ -210,6 +210,7 @@ $-main-border_radius: 12px;
                         opacity: 0;
                         padding: 0;
                         overflow: hidden;
+                        border: 0px solid transparent;
                         // transform: translateY(20px);
                     }
                     &_check &{
