--- a/scss/elements/_inner.scss
+++ b/scss/elements/_inner.scss
@@ -19,6 +19,10 @@
         padding-top: 0;
         width: 1605px;
     }
+    &_index {
+        width: 1605px;
+        padding-top: 100px;
+    }
     &_catalog {
         padding-top: 100px;
         width: 1405px;
