--- a/scss/elements/index/_salesHits.scss
+++ b/scss/elements/index/_salesHits.scss
@@ -4,7 +4,8 @@
     position: relative;
     z-index: 10;
     // height: 550px;
-    padding: 40px 150px 35px 150px;
+    padding: 40px 0 35px 0;
+    width: 100%;
     // overflow: hidden;
     &__bg {
         top: 35px;
