--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,3 +29,4 @@
 @use "elements/catalog/formFilters";
 @use "elements/basket/basketContainer";
 @use "elements/favorite/favorite";
+@use "adaptation/adaptation";
