--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -143,36 +143,17 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
 // ~ Primary button
 
 @mixin style-primaryBTN {
-    position: relative;
-    background: $clr-grad_blue_100;
-    cursor: pointer;
-    transition: 0.15s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: $clr-blue_light_transparent;
     border: 1px solid $clr-blue_light;
-    & .-forHover {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        z-index: 2;
-        opacity: 0;
-        border-radius: calc(inherit - 1px);
-        background: $clr-grad_blue_100_2;
-        transition: 0.15s;
-    }
-    & .-text {
-        position: relative;
-        z-index: 3;
-        cursor: pointer;
-    }
-    &:hover .-forHover{
-        opacity: 1;
+    font-weight: 700;
+    transition: .2s;
+    cursor: pointer;
+    
+    &:hover {
+        @include style-main_hover;
     }
     &:active {
-        transform: scale(0.98);
+        transform: scale(.95)
     }
 }
 
