--- a/scss/elements/game_card/_bigImgBlock.scss
+++ b/scss/elements/game_card/_bigImgBlock.scss
@@ -27,7 +27,8 @@
     & img {
         position: relative;
         z-index: 1;
-        width: 100%;
+        min-width: 100%;
+        min-height: 100%;
     }
     // &__title {
     //     display: flex;
