--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -14,6 +14,7 @@
     transition: 0.2s;
     &__left {
         width: 700px;
+        transition: 0.2s;
     }
     &__title {
         font-size: 30px;
@@ -431,6 +432,7 @@
         justify-content: space-between;
         @include base.style-main_base;
         box-shadow: 0 0 25px -5px rgba(0, 0, 0, 0.3);
+        transition: 0.2s;
         &__top {
 
         }
@@ -579,7 +581,9 @@
         }
     }
     &_hidden {
-        opacity: 0;
-        transform: translateY(-100px) scale(0.6);
+        & > * {
+            opacity: 0;
+            transform: translateY(-100px) scale(0.6);
+        }
     }
 }
