--- a/scss/elements/_inner.scss
+++ b/scss/elements/_inner.scss
@@ -19,12 +19,17 @@
         padding-top: 0;
         width: 1605px;
     }
-    &_index {
-        width: 1605px;
-        padding-top: 100px;
-    }
     &_catalog {
         padding-top: 100px;
         width: 1405px;
+    }
+
+    &_game {
+        width: 1220px;
+        padding-top: 0;
+    }
+    &_index {
+        width: 1605px;
+        padding-top: 100px;
     }
 }
