--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 body {
   background-color: rgb(39, 39, 39);
   margin: 0;
+  overflow-y: scroll; /* Всегда показываем скроллбар */
 }
 
 a {
@@ -205,13 +206,17 @@ label {
   padding-top: 0;
   width: 1605px;
 }
-.inner_index {
-  width: 1605px;
-  padding-top: 100px;
-}
 .inner_catalog {
   padding-top: 100px;
   width: 1405px;
+}
+.inner_game {
+  width: 1220px;
+  padding-top: 0;
+}
+.inner_index {
+  width: 1605px;
+  padding-top: 100px;
 }
 
 .header {
@@ -809,6 +814,9 @@ label {
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
   margin-top: 50px;
 }
 .footer > .inner {
@@ -853,7 +861,7 @@ label {
   padding-right: 12px;
 }
 .footer__head__nav > a:hover {
-  color: rgb(220, 220, 220);
+  color: rgb(1, 162, 255);
 }
 .footer__head > button {
   border-radius: 22px;
@@ -2354,6 +2362,7 @@ label {
   display: flex;
   align-content: flex-start;
   justify-content: center;
+  width: 100%;
   gap: 10px;
   flex-wrap: wrap;
   margin-bottom: 20px;
@@ -2555,6 +2564,7 @@ label {
 .mainInfo__banner__interface__bottom__scroll {
   overflow-y: auto;
   width: 100%;
+  transition: 0.1s;
 }
 .mainInfo__banner__interface__bottom__scroll::-webkit-scrollbar {
   height: 10px;
@@ -2969,9 +2979,52 @@ label {
   position: relative;
   z-index: 3;
   margin: auto;
-  width: 1220px;
-  padding-top: 5px;
+  width: 100%;
+  padding-top: 20px;
   padding-bottom: 5px;
+}
+.editions__header {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-bottom: 15px;
+  gap: 10px;
+}
+.editions__header__nav {
+  position: relative;
+  padding: 12px 16px 12px 16px;
+  cursor: pointer;
+  border-radius: 23px;
+  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.editions__header__nav:hover {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
+}
+.editions__header__nav:active {
+  transform: scale(0.95);
+}
+.editions__header__nav__text {
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.editions__header__nav_active {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.editions__header__nav_active:hover {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.editions__header__nav:active {
+  transform: scale(0.95);
 }
 .editions__grid {
   display: grid;
@@ -3096,7 +3149,7 @@ label {
   z-index: 3;
   margin: auto;
   margin-top: 30px;
-  width: 1220px;
+  width: 100%;
   display: flex;
   gap: 20px;
 }
@@ -3261,7 +3314,7 @@ label {
   position: relative;
   z-index: 3;
   margin: auto;
-  width: 1220px;
+  width: 100%;
   margin-top: 50px;
 }
 .similar > h3 {
@@ -3410,6 +3463,8 @@ label {
   gap: 5px;
   height: 35px;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 }
 .videoIF__race {
   position: relative;
@@ -3462,7 +3517,7 @@ label {
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   opacity: 0;
-  transition: opacity 0.15s;
+  transition: opacity 0.15s, transform 0.2s;
   transform: translateX(-50%);
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -3558,6 +3613,8 @@ label {
 .videoIF__playButton {
   padding: 10px;
   overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
 .videoIF__playButton > svg {
   animation: open 0.2s cubic-bezier(0, 0, 0, 0.75) 1;
