--- a/scss/elements/_footer.scss
+++ b/scss/elements/_footer.scss
@@ -3,6 +3,9 @@
 .footer {
     background-color: rgba(255, 255, 255, .01);
     @include base.style_main_base;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
     margin-top: 50px;
     & > .inner {
         padding-top: 25px;
@@ -44,7 +47,7 @@
                 padding-left: 12px;
                 padding-right: 12px;
                 &:hover {
-                    color: rgb(220, 220, 220);
+                    color: base.$clr-blue_light;
                 }
             }
         }
