--- a/scss/elements/game_card/_editions.scss
+++ b/scss/elements/game_card/_editions.scss
@@ -4,9 +4,39 @@
     position: relative;
     z-index: 3;
     margin: auto;
-    width: 1220px;
-    padding-top: 5px;
+    width: 100%;
+    padding-top: 20px;
     padding-bottom: 5px;
+    &__header {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        margin-bottom: 15px;
+        gap: 10px;
+        &__nav {
+            position: relative;
+            padding: 12px 16px 12px 16px;
+            cursor: pointer;
+            border-radius: 23px;
+            background-color: rgba(255, 255, 255, .05);
+            @include base.style-main_click;
+            transition: .2s;
+            &__text {
+                font-size: 16px;
+                font-weight: 600;
+                cursor: pointer;
+            }
+            &_active {
+                @include base.style-main_active;
+                &:hover {
+                    @include base.style-main_active;
+                }
+            }
+            &:active {
+                transform: scale(.95);
+            }
+        }
+    }
     &__grid {
         display: grid;
         grid-gap: 20px;
