--- a/scss/elements/game_card/_information.scss
+++ b/scss/elements/game_card/_information.scss
@@ -5,7 +5,7 @@
     z-index: 3;
     margin: auto;
     margin-top: 30px;
-    width: 1220px;
+    width: 100%;
     display: flex;
     gap: 20px;
     &__description {
