--- a/scss/elements/game_card/_similar.scss
+++ b/scss/elements/game_card/_similar.scss
@@ -4,7 +4,7 @@
     position: relative;
     z-index: 3;
     margin: auto;
-    width: 1220px;
+    width: 100%;
     margin-top: 50px;
     & > h3 {
         font-size: 24px;
