--- a/css/main.css
+++ b/css/main.css
@@ -1020,41 +1020,56 @@ label {
 }
 .gameV__info {
   position: relative;
-  padding-top: 10px;
+  padding-top: 5px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 10px;
   transition: 0.15s;
+}
+.gameV__info__left {
+  min-width: 0;
+}
+.gameV__info__right {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+  min-width: -moz-max-content;
+  min-width: max-content;
+  margin-left: -50px;
 }
 .gameV__info__name {
   position: relative;
   z-index: 1;
   font-family: robotoFlex, sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .gameV__info__price {
   position: relative;
   z-index: 2;
   font-family: robotoFlex, sans-serif;
   font-weight: 700;
+  transform: translateX(-100%);
   transition: 0.15s;
 }
 .gameV__info__buttons {
-  right: 0;
-  left: 0;
-  top: 10px;
-  position: absolute;
   z-index: 2;
   display: flex;
   justify-content: end;
-  transform: translateY(-10px);
+  gap: 5px;
   opacity: 0;
+  transform: translateY(-15px);
+  margin-left: -100%;
   transition: 0.15s;
-  background: linear-gradient(to right, rgba(39, 39, 39, 0.2), rgb(39, 39, 39), rgb(39, 39, 39));
 }
 .gameV__info__buttons__button {
   position: relative;
   height: 35px;
   width: 35px;
-  margin-left: 5px;
+  z-index: 2;
   border-radius: 7px;
   display: flex;
   align-items: center;
@@ -1083,15 +1098,18 @@ label {
   transform: scale(1.05);
 }
 .gameV:hover .gameV__info {
-  padding-top: 14px;
-  transform: translateY(8px);
+  transform: translateY(10px);
+}
+.gameV:hover .gameV__info__right {
+  margin-left: 0px;
 }
 .gameV:hover .gameV__info__buttons {
-  transform: translateY(-2px);
+  margin-left: 0px;
   opacity: 1;
+  transform: translateY(0px);
 }
 .gameV:hover .gameV__info__price {
-  transform: translateX(-85px);
+  transform: translateX(0);
   text-shadow: 0 0 10px rgb(39, 39, 39);
 }
 
@@ -1203,42 +1221,56 @@ label {
 }
 .gameH__info {
   position: relative;
-  padding-top: 10px;
+  padding-top: 5px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 10px;
   transition: 0.15s;
+}
+.gameH__info__left {
+  min-width: 0;
+}
+.gameH__info__right {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+  min-width: -moz-max-content;
+  min-width: max-content;
+  margin-left: -50px;
 }
 .gameH__info__name {
   position: relative;
   z-index: 1;
   font-family: robotoFlex, sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .gameH__info__price {
   position: relative;
   z-index: 2;
   font-family: robotoFlex, sans-serif;
   font-weight: 700;
+  transform: translateX(-100%);
   transition: 0.15s;
 }
 .gameH__info__buttons {
-  right: 0;
-  left: 0;
-  top: 6px;
-  position: absolute;
   z-index: 2;
   display: flex;
   justify-content: end;
-  transform: translateY(-10px);
+  gap: 5px;
   opacity: 0;
+  transform: translateY(-15px);
+  margin-left: -100%;
   transition: 0.15s;
-  background: linear-gradient(to right, rgba(39, 39, 39, 0.2), rgb(39, 39, 39), rgb(39, 39, 39));
 }
 .gameH__info__buttons__button {
   position: relative;
   height: 35px;
   width: 35px;
   z-index: 2;
-  margin-left: 5px;
   border-radius: 7px;
   display: flex;
   align-items: center;
@@ -1270,8 +1302,25 @@ label {
   font-size: 14px;
   padding: 4px 7px;
 }
+.gameH_headerCatalog .gameH__info__right {
+  gap: 7px;
+}
+.gameH_headerCatalog .gameH__info__name {
+  font-size: 15px;
+}
+.gameH_headerCatalog .gameH__info__price {
+  font-size: 15px;
+}
 .gameH_headerCatalog .gameH__info__buttons {
   background: transparent;
+}
+.gameH_headerCatalog .gameH__info__buttons__button {
+  height: 30px;
+  width: 30px;
+  border-radius: 6px;
+}
+.gameH_headerCatalog .gameH__info__buttons__button img {
+  height: 17px;
 }
 .gameH_headerCatalog {
   opacity: 0;
@@ -1316,14 +1365,18 @@ label {
   transition-delay: 1s;
 }
 .gameH:hover .gameH__info {
-  transform: translateY(8px);
+  transform: translateY(7px);
+}
+.gameH:hover .gameH__info__right {
+  margin-left: 0px;
 }
 .gameH:hover .gameH__info__buttons {
-  transform: translateY(-2px);
+  margin-left: 0px;
   opacity: 1;
+  transform: translateY(0px);
 }
 .gameH:hover .gameH__info__price {
-  transform: translateX(-85px);
+  transform: translateX(0);
   text-shadow: 0 0 10px rgb(39, 39, 39);
 }
 
