--- a/scss/elements/_gameV.scss
+++ b/scss/elements/_gameV.scss
@@ -76,7 +76,8 @@
             align-items: center;
             gap: 10px;
             min-width: max-content;
-            margin-left: -50px;
+            // min-width: 0;
+            // margin-left: -50px;
         }
         &__name {
             position: relative;
@@ -91,7 +92,7 @@
             z-index: 2;
             font-family: base.$fnt-all;
             font-weight: 700;
-            transform: translateX(-100%);
+            // transform: translateX(-100%);
             transition: 0.15s;
         }
         &__buttons {
@@ -101,7 +102,9 @@
             gap: 5px;
             opacity: 0;
             transform: translateY(-15px);
-            margin-left: -100%;
+            // margin-left: -100%;
+            max-width: 0;
+            overflow: hidden;
             transition: 0.15s;
             &__button {
                 position: relative;
@@ -114,6 +117,7 @@
                 justify-content: center;
                 cursor: pointer;
                 overflow: hidden;
+                // transform: scale(0);
                 transition: 0.15s;
                 & img {
                     height: 18px;
@@ -134,9 +138,13 @@
                 margin-left: 0px;
             }
             &__buttons {
-                margin-left: 0px;
+                // margin-left: 0px;
                 opacity: 1;
                 transform: translateY(0px);
+                max-width: 200px;
+                &__button {
+                    // transform: scale(1);
+                }
             }
             &__price {
                 transform: translateX(0);
