--- a/css/main.css
+++ b/css/main.css
@@ -433,14 +433,6 @@ label {
   width: 100%;
   filter: invert(1);
 }
-.header__nav__button_active {
-  background-color: rgba(1, 162, 255, 0.4);
-  border: 1px solid rgb(1, 162, 255);
-}
-.header__nav__button_active:hover {
-  background-color: rgba(1, 162, 255, 0.4);
-  border: 1px solid rgb(1, 162, 255);
-}
 .header__nav__button__counter {
   position: absolute;
   top: 0;
@@ -461,6 +453,74 @@ label {
 }
 .header__nav__button__counter_hidden {
   display: none;
+}
+.header__nav__button_active {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.header__nav__button_active:hover {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.header__nav__buttonBasket {
+  height: 45px;
+  display: flex;
+  max-width: 200px;
+  align-items: center;
+  justify-content: start;
+  box-sizing: border-box;
+  padding: 8px;
+  border-radius: 22.5px;
+  transition: 0.15s all, 0.3s max-width;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+}
+.header__nav__buttonBasket:hover {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
+}
+.header__nav__buttonBasket:active {
+  transform: scale(0.95);
+}
+.header__nav__buttonBasket > img {
+  height: 100%;
+  filter: invert(1);
+}
+.header__nav__buttonBasket__info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  padding-right: 7px;
+  padding-left: 7px;
+  margin-left: 7px;
+  overflow: hidden;
+  cursor: pointer;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  transition: 0.2s;
+}
+.header__nav__buttonBasket__info__value {
+  font-size: 12px;
+}
+.header__nav__buttonBasket_closed {
+  max-width: 45px;
+}
+.header__nav__buttonBasket_closed .header__nav__buttonBasket__info {
+  opacity: 0;
+}
+.header__nav__buttonBasket_active {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.header__nav__buttonBasket_active:hover {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
 }
 .header__catalog {
   position: absolute;
@@ -651,8 +711,184 @@ label {
   opacity: 1;
   bottom: -546px;
 }
+.header__basket {
+  position: absolute;
+  z-index: 4;
+  top: 90px;
+  right: 15px;
+  width: 300px;
+  transition: 0.15s;
+  border-radius: 15px;
+  max-height: 500px;
+  display: none;
+  overflow: hidden;
+  opacity: 0;
+  transform: translateY(-10px);
+  background-color: rgba(50, 50, 50, 0.75);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+.header__basket__head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7px 13px;
+  background-color: rgba(255, 255, 255, 0.05);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+.header__basket__head__link {
+  color: rgb(200, 200, 200);
+  font-size: 12px;
+  transition: 0.15s;
+  cursor: pointer;
+}
+.header__basket__head__link:hover {
+  color: rgb(1, 162, 255);
+}
+.header__basket__grid {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 10px;
+  overflow: auto;
+  max-height: 464px;
+}
+.header__basket__grid::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+}
+.header__basket__grid::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.15); /* Цвет фона трека */
+  border-radius: 10px;
+}
+.header__basket__grid::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.15); /* Цвет ползунка */
+  border-radius: 10px;
+}
+.header__basket__grid::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+.header__basket__grid__game {
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+}
+.header__basket__grid__game__top {
+  padding: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+}
+.header__basket__grid__game__bottom {
+  padding: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+.header__basket__grid__game__bottom__link {
+  color: rgb(200, 200, 200);
+  font-weight: 300;
+  font-size: 12px;
+  cursor: pointer;
+  transition: 0.15s;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.header__basket__grid__game__bottom__link > svg {
+  height: 13px;
+  stroke: rgb(200, 200, 200);
+  transition: 0.15s;
+  transform: translateY(1px);
+}
+.header__basket__grid__game__bottom__link:hover {
+  color: rgb(1, 162, 255);
+}
+.header__basket__grid__game__bottom__link:hover > svg {
+  stroke: rgb(1, 162, 255);
+}
+.header__basket__grid__game__point {
+  padding: 2px 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 1;
+  font-family: robotoFlex, sans-serif;
+  font-size: 12px;
+}
+.header__basket__grid__game__point_discount {
+  font-weight: 700;
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.header__basket__grid__game__point_preOrder > span {
+  font-weight: 700;
+  margin-right: 7px;
+}
+.header__basket__grid__game__point_more {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+}
+.header__basket__grid__game__title {
+  font-size: 16px;
+  font-weight: 700;
+  transition: 0.15s;
+  min-width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+.header__basket__grid__game__title:hover {
+  color: rgb(1, 162, 255);
+}
+.header__basket__grid__game__prices {
+  display: flex;
+  align-items: end;
+  font-size: 14px;
+  gap: 5px;
+}
+.header__basket__grid__game__prices__old {
+  font-size: 12px;
+  color: rgb(200, 200, 200);
+  text-decoration: line-through;
+  transform: translateY(-1px);
+}
+.header__basket__grid__game__delete {
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  transition: 0.15s;
+  cursor: pointer;
+}
+.header__basket__grid__game__delete > svg {
+  height: 100%;
+}
+.header__basket__grid__game__delete:hover {
+  background-color: rgb(170, 22, 22);
+}
+.header__basket__grid__game__delete:active {
+  transform: scale(0.8);
+}
+.header__basket__grid__nothing {
+  height: 25px;
+  color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+}
+.header__basket_active {
+  opacity: 1;
+  transform: translateY(0px);
+}
 .header__notification {
   position: absolute;
+  z-index: 4;
   top: 90px;
   right: 15px;
   width: 300px;
@@ -4539,9 +4775,21 @@ label {
   font-size: 16px;
   cursor: pointer;
   transition: 0.15s;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.basketContainer__gameList__games__game__left__nameBlock__linkPlatform > svg {
+  height: 16px;
+  stroke: rgb(153, 153, 153);
+  transition: 0.15s;
+  transform: translateY(1px);
 }
 .basketContainer__gameList__games__game__left__nameBlock__linkPlatform:hover {
-  color: rgb(255, 255, 255);
+  color: rgb(1, 162, 255);
+}
+.basketContainer__gameList__games__game__left__nameBlock__linkPlatform:hover > svg {
+  stroke: rgb(1, 162, 255);
 }
 .basketContainer__gameList__games__game__right {
   position: relative;
