--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -184,12 +184,6 @@
                 width: 100%;
                 filter: invert(1);
             }
-            &_active {
-                @include base.style-main_active;
-                &:hover {
-                    @include base.style-main_active;
-                }
-            }
             &__counter {
                 position: absolute;
                 top: 0;
@@ -212,6 +206,60 @@
                 }
                 &_hidden {
                     display: none;
+                }
+            }
+            &_active {
+                @include base.style-main_active;
+                &:hover {
+                    @include base.style-main_active;
+                }
+            }
+        }
+        &__buttonBasket {
+            height: 45px;
+            display: flex;
+            max-width: 200px;
+            align-items: center;
+            justify-content: start;
+            box-sizing: border-box;
+            padding: 8px;
+            border-radius: 22.5px;
+            transition: 0.15s all, .3s max-width;
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
+            @include base.style-main_click;
+            & > img {
+                height: 100%;
+                filter: invert(1);
+            }
+            &__info {
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+                justify-content: center;
+                // gap: 2px;
+                padding-right: 7px;
+                padding-left: 7px;
+                margin-left: 7px;
+                overflow: hidden;
+                cursor: pointer;
+                border-left: 1px solid rgba(255, 255, 255, .2);
+                transition: .2s;
+                &__value {
+                    font-size: 12px;
+                }
+            }
+            &_closed {
+                max-width: 45px;
+            }
+            &_closed &__info{
+                opacity: 0;
+            }
+            &_active {
+                @include base.style-main_active;
+                &:hover {
+                    @include base.style-main_active;
                 }
             }
         }
@@ -413,8 +461,172 @@
         opacity: 1;
         bottom: -546px;
     }
+    &__basket {
+        position: absolute;
+        z-index: 4;
+        top: 90px;
+        right: 15px;
+        width: 300px;
+        transition: 0.15s;
+        border-radius: 15px;
+        max-height: 500px;
+        display: none;
+        overflow: hidden;
+        opacity: 0;
+        transform: translateY(-10px);
+        @include base.style-main_base;
+        &__head {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 7px 13px;
+            background-color: rgba(255, 255, 255, .05);
+            border-bottom: 1px solid rgba(255, 255, 255, .1);
+            &__title {
+
+            }
+            &__link {
+                color: rgb(200, 200, 200);
+                font-size: 12px;
+                transition: .15s;
+                cursor: pointer;
+                &:hover {
+                    color: base.$clr-blue_light;
+                }
+            }
+        }
+        &__grid {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            padding: 10px;
+            overflow: auto;
+            max-height: calc(500px - 36px);
+            @include base.style-webkit_scrollbar;
+            &__game {
+                border-radius: 10px;
+                @include base.style_main;
+                &__top {
+                    padding: 6px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    gap: 5px;
+                }
+                &__bottom {
+                    padding: 6px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    background-color: rgba(0, 0, 0, .1);
+                    border-top: 1px solid rgba(255, 255, 255, .2);
+                    // &__left {
+                    //     display: flex;
+                    // }
+                    &__link {
+                        color: rgb(200, 200, 200);
+                        font-weight: 300;
+                        font-size: 12px;
+                        cursor: pointer;
+                        transition: 0.15s;
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
+                        & > svg {
+                            height: 13px;
+                            stroke: rgb(200, 200, 200);
+                            transition: 0.15s;
+                            transform: translateY(1px);
+                        }
+                        &:hover {
+                            color: base.$clr-blue_light;
+                        }
+                        &:hover > svg {
+                            stroke: base.$clr-blue_light;
+                        }
+                    }
+                }
+                &__point {
+                    padding: 2px 5px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    opacity: 1;
+                    font-family: base.$fnt-all;
+                    font-size: 12px;
+                    &_discount {
+                        font-weight: 700;
+                        @include base.style-percentBlock;
+                    }
+                    &_preOrder {
+                        & > span {
+                            font-weight: 700;
+                            margin-right: 7px;
+                        }
+                    }
+                    &_more {
+                        @include base.style-main;
+                    }
+                }
+                &__title {
+                    font-size: 16px;
+                    font-weight: 700;
+                    transition: .15s;
+                    min-width: 0;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    cursor: pointer;
+                    &:hover {
+                        color: base.$clr-blue_light;
+                    }
+                }
+                &__prices {
+                    display: flex;
+                    align-items: end;
+                    font-size: 14px;
+                    gap: 5px;
+                    &__new {
+
+                    }
+                    &__old {
+                        font-size: 12px;
+                        color: rgb(200, 200, 200);
+                        text-decoration: line-through;
+                        transform: translateY(-1px);
+                    }
+                }
+                &__delete {
+                    box-sizing: border-box;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    transition: .15s;
+                    cursor: pointer;
+                    & > svg {
+                        height: 100%;
+                    }
+                    &:hover {
+                        background-color: base.$clr-red_close;
+                    }
+                    &:active {
+                        transform: scale(.8);
+                    }
+                }
+            }
+            &__nothing {
+                height: 25px;
+                color: rgba(255, 255, 255, .5);
+                text-align: center;
+            }
+        }
+        &_active {
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
     &__notification {
         position: absolute;
+        z-index: 4;
         top: 90px;
         right: 15px;
         width: 300px;
