--- a/scss/elements/game_card/_videoIF.scss
+++ b/scss/elements/game_card/_videoIF.scss
@@ -99,82 +99,110 @@
         height: 35px;
         width: 100px;
         position: relative;
-        -webkit-backdrop-filter: blur(3px);
-        backdrop-filter: blur(3px);
-        @include base.style-main;
-        overflow: hidden;
+        
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        padding-left: 7px;
-        padding-right: 10px;
-        border-radius: 17.5px;
-        &__mouse {
-            opacity: 0;
-            position: absolute;
-            z-index: 2;
-            top: 0; 
-            bottom: 0;
-            left: 0;
-            width: 0%;
-            background-color: rgba(255, 255, 255, .3);
-            border-radius: 6px;
-            transition: opacity .15s;
-        }
-        &__value {
-            position: absolute;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            bottom: 0;
+        &__race {
             height: 100%;
-            width: 0%;
-            border-radius: 6px;
-            @include base.style-main_active;
-            border: none;
-        }
-        &__forMouse {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            z-index: 5;
-        }
-        &__num {
-            position: relative;
-            z-index: 4;
-            transform: translateY(-1px);
-            font-size: 12px;
-            -webkit-touch-callout: none; /* iOS Safari */
-            -webkit-user-select: none; /* Safari */
-            -khtml-user-select: none; /* Konqueror HTML */
-            -moz-user-select: none; /* Old versions of Firefox */
-            -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none;
-        }
-        &:hover &{
+            width: 100%;
+            -webkit-backdrop-filter: blur(3px);
+            backdrop-filter: blur(3px);
+            @include base.style-main;
+            overflow: hidden;
+            padding-left: 7px;
+            padding-right: 10px;
+            border-radius: 17.5px;
+            display: flex;
+            align-items: center;
+            justify-content: start;
             &__mouse {
+                opacity: 0;
+                position: absolute;
+                z-index: 2;
+                top: 0; 
+                bottom: 0;
+                left: 0;
+                width: 0%;
+                background-color: rgba(255, 255, 255, .3);
+                border-radius: 6px;
+                transition: opacity .15s;
+            }
+            &__value {
+                position: absolute;
+                z-index: 1;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                height: 100%;
+                width: 0%;
+                border-radius: 6px;
+                @include base.style-main_active;
+                border: none;
+            }
+            &__forMouse {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                z-index: 5;
+            }
+            &__num {
+                position: relative;
+                z-index: 4;
+                transform: translateY(-1px);
+                font-size: 12px;
+                -webkit-touch-callout: none; /* iOS Safari */
+                -webkit-user-select: none; /* Safari */
+                -khtml-user-select: none; /* Konqueror HTML */
+                -moz-user-select: none; /* Old versions of Firefox */
+                -ms-user-select: none; /* Internet Explorer/Edge */
+                user-select: none;
+            }
+            &:hover &__mouse{
                 opacity: 1;
             }
         }
-        & > svg {
-            position: relative;
-            z-index: 4;
-            height: 20px;
-            animation: open .2s base.$tf-main 1;
+        // & ._volume_muted {
+        //     display: none;
+        // }
+        // & ._volume_on {
+        //     display: block;
+        // }
+        &__icon {
+            width: 35px;
+            height: 35px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            & svg {
+                position: relative;
+                z-index: 4;
+                height: 20px;
+                animation: open .2s base.$tf-main 1;
+                & > g > g {
+                    fill: #fff;
+                    transition: .15s;
+                }
+                &._volume_muted {
+                    display: none;
+                }
+                &._volume_on {
+                    display: block;
+                }
+            }
+            &:hover svg {
+                & > g > g {
+                    fill: base.$clr-blue_light;
+                }
+            }
         }
-        & > ._volume_muted {
-            display: none;
-        }
-        & > ._volume_on {
-            display: block;
-        }
-        &_muted {
-            & > ._volume_muted {
+        &_muted &__icon > svg{
+            &._volume_muted {
                 display: block;
             }
-            & > ._volume_on {
+            &._volume_on {
                 display: none;
             }
         }
